FILE(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS 
    "${LIBUTIL_HEADERS}/*.hpp"
)

FILE(GLOB_RECURSE BUILD_FILE_LIST CONFIGURE_DEPENDS 
    "src/*.cpp"
)

ADD_LIBRARY(libutil STATIC 
	${HEADERS}
	${BUILD_FILE_LIST}
)

TARGET_INCLUDE_DIRECTORIES(libutil PUBLIC  "${LIBUTIL_HEADERS}")
TARGET_INCLUDE_DIRECTORIES(libutil PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
TARGET_INCLUDE_DIRECTORIES(libutil PUBLIC  "${LIBUTIL_LIBRARIES}/fmt/include")
TARGET_INCLUDE_DIRECTORIES(libutil PRIVATE "${LIBUTIL_LIBRARIES}/uuid/include")
TARGET_INCLUDE_DIRECTORIES(libutil PRIVATE "${LIBUTIL_LIBRARIES}/gsl/include")
TARGET_INCLUDE_DIRECTORIES(libutil PRIVATE "${LIBUTIL_LIBRARIES}/spookyhash/include")

TARGET_COMPILE_DEFINITIONS(libutil PUBLIC -DFMT_HEADER_ONLY)

SET_TARGET_PROPERTIES(libutil PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(libutil PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(libutil PROPERTIES OUTPUT_NAME "libutil")
