FILE(GLOB_RECURSE LIBUTIL_SOURCE CONFIGURE_DEPENDS 
    "libutil/*.cpp"
)

ADD_LIBRARY(libutil STATIC 
	${LIBUTIL_SOURCE}
)

TARGET_INCLUDE_DIRECTORIES(libutil PUBLIC  "${CMAKE_CURRENT_SOURCE_DIR}/libutil")
TARGET_INCLUDE_DIRECTORIES(libutil PUBLIC  "${LIBUTIL_LIBRARIES}/fmt/include")
TARGET_INCLUDE_DIRECTORIES(libutil PRIVATE "${LIBUTIL_LIBRARIES}/uuid/include")
TARGET_INCLUDE_DIRECTORIES(libutil PRIVATE "${LIBUTIL_LIBRARIES}/gsl/include")
TARGET_INCLUDE_DIRECTORIES(libutil PRIVATE "${LIBUTIL_LIBRARIES}/spookyhash/include")

TARGET_COMPILE_DEFINITIONS(libutil PUBLIC -DFMT_HEADER_ONLY)

SET_TARGET_PROPERTIES(libutil PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(libutil PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(libutil PROPERTIES OUTPUT_NAME "libutil")
