INCLUDE_DIRECTORIES("${LIBUTIL_ROOT}")
INCLUDE_DIRECTORIES("${LIBUTIL_HEADERS}")
INCLUDE_DIRECTORIES("${GTEST_INCLUDES}")

INCLUDE(GoogleTest)

LINK_LIBRARIES(libutil)
LINK_LIBRARIES(GTest::gtest_main)

FILE(GLOB_RECURSE TESTS_BUILD_FILE_LIST CONFIGURE_DEPENDS 
    "*.cpp"
)

ADD_EXECUTABLE(tests
    ${TESTS_BUILD_FILE_LIST}
)

gtest_discover_tests(tests)
